--- a/css/main.css
+++ b/css/main.css
@@ -648,4 +648,85 @@ input[type=submit]:hover {
 .our_team .team_member .member_img:hover .social_media{
   transform: scale(1);
 }
-/*=======================================================================================*/  
+/*==========================footer=============================================================*/  
+#footer{
+        
+  background:linear-gradient(to bottom, rgba(2, 4, 17, 0.89),rgba(25, 31, 34, 0.89)),
+           url('../images/footer-back.jpg');       
+  background-size:100%;
+  background-attachment:fixed;
+   color:white;
+   height:500px;
+   position:relative;
+   overflow:hidden;
+
+ }
+
+ #footer .footer-content{
+   
+   height:440px;
+   display:flex;
+   z-index:2;
+  
+ }
+ #footer .footer-content .footer-section{
+   flex:5;
+  
+   
+ }
+ #footer .footer-content .contact{
+   padding:50px;
+ }
+ #footer .footer-content .map{
+   padding:20px;
+ }
+ #footer .footer-bottom{
+   background:grey;
+   color:white;
+   height:50px;
+   position:absolute;
+   bottom:0px;
+   left:0px;
+   width:100%;
+   text-align: center;
+   padding-top:20px;
+ }
+
+ 
+ #footer .footer-content .contact .f-icons{
+   
+   margin-bottom:50px;
+   border-bottom: 1px solid white;
+  
+ }
+ #footer .footer-content .contact .f-icons .fas,
+ 
+ #footer .footer-content .contact .f-icons  h2{
+   display:inline-block;
+ }
+
+  #footer .footer-content .contact .f-icons  h2{
+    margin:0px;
+  }
+  #footer .footer-content .contact .f-icons .fas{
+    font-size:1.5em;
+    margin-right:0.5em;
+  }
+  #footer .footer-content .contact .f-icons  p{
+    margin-left:3em;
+  }
+
+  @media screen and (max-width:1341px){
+    #footer{
+   height:auto; }
+
+ #footer .footer-content{
+   height:auto;
+   flex-direction:column;
+ }
+ #footer .footer-content .map{
+  text-align:center;
+  margin:auto;
+}
+
+  }
